hphp/test/zend/good/ext/zlib/tests/zlib_filter_deflate.php.skipif
<?php if (!extension_loaded("zlib")) print "skip"; ?>