hphp/test/zend/bad/Zend/tests/closure_042.php.skipif
<?php if(!extension_loaded("reflection")) print "skip no reflection"; ?>